--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ imgui = "0.9.0"
 imgui-winit-support = "0.9.0"
 imgui-opengl-renderer = "0.12.0"
 noise = "0.8.2"
+lininterp = "0.1.3"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
